# hasktodo

./: .project-settings.yml  LICENSE  README.md  TODO  hasktodo.cabal  mess.hs  todo.txt
app/: Main.hs
src/: ToDo.hs
test/: Spec.hs  ToDoSpec.hs
