name:                hasktodo
version:             0.1.0.0
synopsis:            A productivity tool based on todo.txt outlines.
description:         Please see README.md
homepage:            http://github.com/dannyob/hasktodo#readme
license:             GPL-3
license-file:        LICENSE
author:              Danny O'Brien
maintainer:          danny@spesh.com
copyright:           2015 Danny O'Brien
category:            Productivity
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ToDo
  build-depends:       base >= 4.6 && < 5
  default-language:    Haskell2010

executable htodo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasktodo
  default-language:    Haskell2010

test-suite hasktodo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hasktodo
  other-modules:       ToDoSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dannyob/hasktodo
